--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -207,7 +207,7 @@
                         <label for="password-edit">
                             <strong>Password</strong>
                         </label>
-                        <input type="text" class="form-control" id="password-edit" name="password">
+                        <input type="password" class="form-control" id="password-edit" name="password">
                         <br>
                         <label for="roles-edit">
                             <strong>Role</strong>
